--- a/test/test2.html
+++ b/test/test2.html
@@ -70,12 +70,8 @@
                 <div class="sub-item">Voluptates.</div>
             </div>
         </div>
-        <div class="menu-item">
-        REFERENCES <i class="fas fa-caret-down"></i>
-        </div>
-        </div>
 
-        </div>
+        <div class="menu-item"> REFERENCES <i class="fas fa-caret-down"></i></div>   
         <div class="menu-item">EXAMPLES <i class="fas fa-caret-down"></i></div>
         <div class="menu-item">EXERCIES <i class="fas fa-caret-down"></i></div>
         <div class="dummy"></div>
@@ -134,3 +130,4 @@
     </div>
 </body>
 </html>
+    
