--- a/javascript/event-ex1.html
+++ b/javascript/event-ex1.html
@@ -6,7 +6,12 @@
     </style>
 </head>
 <body>
+    <button onclick="hello()">CLICK</button>
     <script>
+        function hello() {
+            console.log('hello');
+            console.log('world');
+        }
     </script>
 </body>
 </html>
