--- a/javascript/if-ex2.html
+++ b/javascript/if-ex2.html
@@ -7,17 +7,16 @@
 </head>
 <body>
     <input type="text" id="input1"> <br>
-    <button onclick="vote()">투표 가능?</button>
+    <button onclick="vote()">투표가능?</button>
     <p id="result"></p>
     <script>
         function vote() {
-            var age  = document.getElementById("input1").value;
+            var age = document.getElementById("input1").value;
             age = Number(age);
 
-            if (age >= 18) {
+            document.getElementById('result').innerHTML = "투표 불가능";
+            if (age > 18) {
                 document.getElementById('result').innerHTML = "투표 가능";
-            } else {
-                document.getElementById('result').innerHTML = "투표 불가능";
             }
         }
     </script>
