--- a/javascript/if-ex4-els.html
+++ b/javascript/if-ex4-els.html
@@ -11,7 +11,7 @@
     <p id="result"></p>
     <script>
         function vote() {
-            var age  = document.getElementById("input1").value;
+            var age = document.getElementById('input1').value;
             age = Number(age);
 
             if (age >= 18) {
