--- a/javascript/if-ex1.html
+++ b/javascript/if-ex1.html
@@ -7,6 +7,13 @@
 </head>
 <body>
     <script>
+        console.log("시작");
+
+       if (true) {
+            console.log("실행문1");
+        }
+
+        console.log("끝");
     </script>
 </body>
 </html>
