--- a/javascript/while-ex3-do-while.html
+++ b/javascript/while-ex3-do-while.html
@@ -6,18 +6,15 @@
     </style>
 </head>
 <body>
-    
-  
     <script>
         console.log("시작");
 
         var condition = false;
-        do{
-            console.log("반복할 문장들....");
-            }
-        while (condition)
+        do {
+            console.log("반복할 명령문들...");
+         }
+        while (condition) 
         console.log("종료");
-      
     </script>
 </body>
 </html>
