--- a/javascript/break-continue-ex1.html
+++ b/javascript/break-continue-ex1.html
@@ -6,18 +6,16 @@
     </style>
 </head>
 <body>
-    
-  
     <script>
         console.log("시작");
 
-        var condition = false;
-        do{
-            console.log("반복할 문장들....");
-            }
-        while (condition)
+        var condition = true;
+        while (condition) {
+            console.log("반복할 명령문들....");
+            break;
+            console.log("다른 명령문들....");
+        }
         console.log("종료");
-      
     </script>
 </body>
 </html>
