--- a/javascript/break-continue-ex2.html
+++ b/javascript/break-continue-ex2.html
@@ -6,18 +6,18 @@
     </style>
 </head>
 <body>
-    
-  
     <script>
         console.log("시작");
 
-        var condition = false;
-        do{
-            console.log("반복할 문장들....");
+        for (var i = 0; i < 5; i++) {
+            console.log("반복할 명령문들...");
+            if ((i % 2) == 0) {
+            continue;
             }
-        while (condition)
+            console.log("다른 명령문들...");
+        }
+
         console.log("종료");
-      
     </script>
 </body>
 </html>
